k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-estate-backend
  namespace: real-estate-app
  labels:
    app: real-estate-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: real-estate-backend
  template:
    metadata:
      labels:
        app: real-estate-backend
    spec:
      containers:
        - name: backend
          image: 016817716305.dkr.ecr.us-east-1.amazonaws.com/realestate-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          livenessProbe:
            httpGet:
              path: /api/user/check-auth
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/user/check-auth
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
